Added additional documentation within lircd.conf

--- a/lircd.conf
+++ b/lircd.conf
@@ -4,14 +4,25 @@
 # Creating user: mattjm
 # CreateDate: Sun Feb 22 19:57:38 PST 2015
 #
+# See full documentation at:  https://github.com/mattjm/Fujitsu_IR
 #
-# Export from IrScrutinizer
-# some exports for AnalysIR as well
+# Tested on kernel 4.1.7+ and LIRC 0.9.0-pre1
 #
-
-#should work for both heat pumps and AC only units. Heat pump mode doesn't have any meaning for AC only units.  
-#command names generally follow the format:  mode-fanspeed-temp e.g. heat-auto-68F
-#There are also some special command names for special remote functions
+# Source:
+# Export from IrScrutinizer, and some exports from Analysir.
+# A few codes directly captured from a Fujitsu AR-REG1U remote (not using irrecord).  
+#
+# Raw codes are required--default lirc install chokes on 128 or larger bit hex codes.  
+# See 2015-02-23 post to lirc mailing list (subject:  "bit limit for irsend ?")
+# 
+# Controls Fujitsu ductless (mini-split) heat pumps and air conditioners.
+#
+# This should work for both heat pumps and AC only units. Heat pump mode doesn't have any meaning for AC only units.  
+#
+# It's been tested with a Fujitsu ASU7RLF1 indoor unit.  It should work for most Fujitsu units of that generation (2014), and probably several generations before and after.  
+#
+# command names generally follow the format:  mode-fanspeed-temp e.g. heat-auto-68F
+# There are also some special command names for special remote functions
 
 begin remote
 	name	fujitsu_heat_ac
